--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,66 @@
-#search{
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
+ 
+ 
+ #search{
+    width: 500px;
     border-radius: 20px;
-    background-color: rgba(0, 255, 255, 0.801);
-    margin-left: 35%;
-    border-color: rgb(0, 255, 255);
-    border-style: dashed;
+    background-color: rgb(238, 255, 255);
+    margin-left: 15%;
+    border-color: rgb(218, 247, 247);
+    border-style: hidden;
+} 
+
+
+.dark{
+  border: solid #000000;
+  width: 200px;
+
 }
 
-.amin {
-    display: flex;
-    
-  }
+ /* .amin  {
+    display: -moz-grid-group;
   
-body {
-    padding: 25px;
+  }  */
+   
+.amin2 {
+display: flex;
+}
+
+ 
+ .amin3 {
+  display: flex;
+  
+
+  }
+
+  .amin4{
+    display: flex;
+  } 
+
+ body {
+  display: block;
+    padding: px;
     background-color: white;
     color: black;
     font-size: 25px;
   }
   
 .dark-mode {
-    background-color: black;
-    color: white;
-  }
+    background-color: rgb(0, 0, 0);
+    color: rgba(255, 241, 241, 0.856);
+  } 
 
 
 
 
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 
-
-  * {box-sizing: border-box;}
+   * {box-sizing: border-box;}
 
 body { 
   margin: 0;
@@ -86,5 +117,486 @@ body {
 
 
 .header-right:hover{
-    background-color: rgb(24, 255, 139);
+    background-color: rgb(0, 13, 201);
+    border-radius: 50px;
+}
+
+.all-browsers {
+  margin: 0;
+  padding: 5px;
+  background-color: rgb(54, 52, 52);
+}
+
+.all-browsers > h1, .browser {
+  margin: 10px;
+  padding: 5px;
+}
+
+.browser {
+  background: rgb(81, 162, 255);
+}
+
+.browser > h2, p {
+  margin: 4px;
+  font-size: 90%;
+}
+
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+
+} 
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+
+/* Full-width input fields */
+ input[type=text], input[type=password] {
+  width:100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #0041f5;
+  box-sizing: border-box;
+} 
+
+/* Set a style for all buttons */
+ .iran{
+  background-color: #0026ff;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 20%;
+} 
+
+ button:hover {
+  opacity: 0.8;
+} 
+
+/* Extra styles for the cancel button */
+ .cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #19ffe0;
+} 
+
+/* Center the image and position the close button */
+ .imgcontainer {
+  text-align: left;
+  margin: 12px 0 24px 0;
+  position: relative;
+}  
+
+  img.avatar {
+  width: 150px;
+  border-radius: 10px;
+}
+
+.container {
+  padding: 9px;
+} 
+
+ span.psw {
+  float: right;
+  padding-top: 16px;
+}  
+
+/* The Modal (background) */ 
+
+  .modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 10px; 
+  height: 10px; 
+ overflow: auto; 
+  background-color: rgb(255, 0, 0); 
+  background-color: rgba(0, 0, 0, 0.4); 
+  padding-top: 60px;
+}  
+
+/* Modal Content/Box */
+ .modal-content {
+  background-color: #ffffff;
+  margin: 5% auto 15% auto; 
+  border: 1px solid #918787;
+  width: 20%; 
+} 
+
+/* The Close Button (x) */
+ .close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #0044ff;
+  font-size: 50px;
+  font-weight: bold;
+} 
+
+ .close:hover,
+.close:focus {
+  color: rgb(255, 24, 24);
+  cursor: pointer;
+} 
+
+/* Add Zoom Animation */
+ .animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.2s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+} 
+
+/* Change styles for span and cancel button on extra small screens */
+ @media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+} 
+
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+ *{box-sizing: border-box}
+.mySlides {display: none}
+img {vertical-align: middle;} 
+
+
+ .slideshow-container {
+  max-width: 10000px;
+  position: relative;
+  margin: auto;
+  margin-top: 5%;
+} 
+
+
+ .prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 20px;
+  margin-top: -22px;
+  color: rgb(247, 33, 33);
+  font-weight: bold;
+  font-size: 18px;
+  transition: 1s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+} 
+
+
+ .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+} 
+
+
+ .prev:hover, .next:hover {
+  background-color: rgba(255, 55, 40, 0.8);
+} 
+
+
+ .text1 {
+  color: #0084ff;
+  font-size: 130px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+} 
+
+/* Number text (1/3 etc) */
+ .numbertext {
+  color: #ffae00;
+  font-size: 30px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+} 
+
+
+ .dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #fffbfb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+} 
+
+ .active, .dot:hover {
+  background-color: #003bfc;
+} 
+
+
+ .fade {
+  animation-name: fade;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 20px}
+} */
+
+ /* ---------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+ .container {
+  position: relative;
+  width: 20px;
+}
+
+.image {
+  display: block;
+  width: 350px;
+  height: 250px;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: #000000;
+  overflow: hidden;
+  width: 40%;
+  height:0;
+  transition: .5s ease;
+}
+
+.container:hover .overlay {
+  bottom: 0;
+  height: 99%;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: left;
+} 
+
+
+
+
+
+
+.pagination {
+  display: inline-flex;
+}
+
+.pagination a {
+  font-size: 3vh;
+  border-radius: 1px;
+  color: rgb(0, 0, 0);
+  float: right;
+  padding: 8px 30px;
+  text-decoration: none;
+  transition: background-color .3s;
+  margin: 28px;
+  background-color: #ffffff;
+}
+
+/* .pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+} */
+
+.pagination a:hover {background-color: #0400ff;}
+
+
+/* -------------------------------------------------------------------------zoom --------------------------------------------------------------------- */
+
+/* 
+ * {box-sizing: border-box;}
+
+#img-zoom-container {
+  position:relative;
+} */
+
+/* .img-zoom-lens {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+ 
+  width: 150px;
+  height: 150px;
+} */
+
+/* .img-zoom-result {
+ border: 1px solid #d4d4d4; 
+  width:400px;
+  height: 400px;
+}   */
+
+/* ----------------------------------------------------------------head names------------------------------------------------------------------ */
+div.scrollmenu {
+  background-color: #606060;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 33px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #7fa8ff76;
+}
+
+/* -------------------------------------------------------------icons footer---------------------------------------------------------------------------- */
+
+.fa {
+  padding: 15px;
+  font-size: 20px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+
+/* -------------------------------------------------chat------------------------------------------------------ */
+
+
+
+
+/* Button used to open the chat form - fixed at the bottom of the page */
+.open-button {
+  background-color: #191f22;
+  color: rgb(255, 255, 255);
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup chat - hidden by default */
+.chat-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: rgb(165, 199, 171);
+}
+
+/* Full-width textarea */
+.form-container textarea {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f186;
+  resize: none;
+  min-height: 200px;
+}
+
+/* When the textarea gets focus, do something */
+.form-container textarea:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/send button */
+.form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
 }
